--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -45,6 +45,8 @@
         </androidx.appcompat.widget.Toolbar>
 
 
+
+
         <LinearLayout
             android:layout_marginTop="30dp"
             android:layout_width="match_parent"
@@ -53,17 +55,35 @@
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_up_heading"
-                android:textSize="32sp"
-                android:layout_marginBottom="10dp"
-                android:fontFamily="sans-serif-medium"
-                android:textColor="@color/dark_blue"
-                android:layout_gravity="center_horizontal"
-                />
+                android:gravity="center_horizontal">
 
+
+                <ImageView
+                    android:id="@+id/icon"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_centerInParent="true"
+                    android:paddingRight="6dp"
+                    android:src="@drawable/wamicon"
+                    />
+
+
+                <TextView
+                    android:layout_toRightOf="@id/icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sign_up_heading"
+                    android:textSize="32sp"
+                    android:fontFamily="sans-serif-medium"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:layout_centerVertical="true"
+                    />
+
+
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
