Added log out to settings page + on click listeners

--- a/app/src/main/res/xml/settings_preferences.xml
+++ b/app/src/main/res/xml/settings_preferences.xml
@@ -1,8 +1,7 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Preference
-        android:layout="@layout/fragment_settings"/>
+    <Preference android:layout="@layout/fragment_settings" />
 
     <PreferenceCategory
         app:key="account"
@@ -24,6 +23,11 @@
             app:key="locations"
             app:title="Locations" />
 
+        <Preference
+            app:key="logout"
+            app:title="Logout"
+            android:summary="Logout of your account"/>
+
 
     </PreferenceCategory>
 
@@ -33,7 +37,7 @@
 
         <SwitchPreference
             app:key="enable_dark_mode"
-            app:title="Dark Mode"/>
+            app:title="Dark Mode" />
 
     </PreferenceCategory>
 
