Fixed images quality Fixed certain bugs

--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -11,7 +11,8 @@
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
-        android:background="@drawable/ic_gps_icon"
+
+        android:background="@drawable/ic_locationhdpi"
         />
 
     <TextView
