--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,5 +20,6 @@
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
+    <style name="dialog"></style>
 
 </resources>
