Added dark mode Added certain animations fixed bugs

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,7 +106,7 @@
                     android:id="@+id/signInGoogleButton"
                     android:layout_width="70dp"
                     android:src="@drawable/google_icon"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/fabBg"
                     app:fabCustomSize="70dp"
                     app:borderWidth="0dp"
                     app:elevation="4dp"
@@ -121,7 +121,7 @@
                     app:fabCustomSize="70dp"
                     android:src="@drawable/facebook_icon_2"
                     android:layout_toRightOf="@id/signInGoogleButton"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/fabBg"
                     android:layout_marginLeft="10dp"
                     app:borderWidth="0dp"
                     app:maxImageSize="32dp"
@@ -136,7 +136,7 @@
                     app:fabCustomSize="70dp"
                     android:src="@drawable/twitter_icon"
                     android:layout_toRightOf="@id/signInFacebookButton"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/fabBg"
                     android:layout_marginLeft="10dp"
                     app:borderWidth="0dp"
                     app:maxImageSize="32dp"
