--- a/app/src/main/res/drawable-xxhdpi/splash_screen_dark.xml
+++ b/app/src/main/res/drawable-xxhdpi/splash_screen_dark.xml
@@ -1,6 +1,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <color android:color="@color/white"/>
+        <color android:color="@color/cardview_dark_background"/>
     </item>
     <item>
         <bitmap
