--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -104,7 +104,7 @@
                         android:id="@+id/signInGoogleButton"
                         android:layout_width="70dp"
                         android:src="@drawable/google_icon"
-                        android:backgroundTint="@color/white"
+                        android:backgroundTint="@color/fabBg"
                         app:fabCustomSize="70dp"
                         app:borderWidth="0dp"
                         app:elevation="4dp"
@@ -119,7 +119,7 @@
                         app:fabCustomSize="70dp"
                         android:src="@drawable/facebook_icon_2"
                         android:layout_toRightOf="@id/signInGoogleButton"
-                        android:backgroundTint="@color/white"
+                        android:backgroundTint="@color/fabBg"
                         android:layout_marginLeft="10dp"
                         app:borderWidth="0dp"
                         app:maxImageSize="32dp"
@@ -134,7 +134,7 @@
                         app:fabCustomSize="70dp"
                         android:src="@drawable/twitter_icon"
                         android:layout_toRightOf="@id/signInFacebookButton"
-                        android:backgroundTint="@color/white"
+                        android:backgroundTint="@color/fabBg"
                         android:layout_marginLeft="10dp"
                         app:borderWidth="0dp"
                         app:maxImageSize="32dp"
