--- a/app/src/main/res/layout/dialog_safe.xml
+++ b/app/src/main/res/layout/dialog_safe.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:backgroundTint="@color/white"
+    android:background="@color/white"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
     app:cardCornerRadius="15dp">
