--- a/app/src/main/res/layout/layout_location_item.xml
+++ b/app/src/main/res/layout/layout_location_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:backgroundTint="@color/white"
+    android:background="@color/white"
     android:layout_marginBottom="5dp"
     app:cardCornerRadius="4dp">
 
