--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,11 @@
     <color name="dark_blue">#0C3761</color>
     <color name="white">#fff</color>
     <color name="black">#000000</color>
+
+    <color name="welcomeTextColor">@color/dark_gray</color>
+    <color name="fabBg">@color/white</color>
+
+
     <color name="dark_gray">#3D3D3D</color>
     <color name="light_gray">#cccccc</color>
 </resources>
