--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -23,7 +23,7 @@
         <fragment
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:id="@+id/fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+            class ="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
