--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -32,7 +32,7 @@
     <TextView
         android:layout_marginTop="20dp"
         android:id="@+id/slideParagraph"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingTop="10dp"
